--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ apacheCommonsCompressVersion=1.21
 apacheCuratorVersion=5.2.0
 apacheZookeeperVersion=3.6.3
 awsSdkVersion=2.17.43
+azureSdkVersion=12.13.0
 checkstyleToolVersion=8.23
 bookKeeperVersion=4.15.0
 commonsBeanutilsVersion=1.9.4
